	 - note: NEWS format changed, see 01012011 meta entry below
	 - changed: do not use deprecated  jack_client_new() 
	 - changed: simplified signal handling for not-so-POSIX
	   platforms 
	 - fixed: seeks with -klg did not work
	 - fixed: bug in int-float conversions
	 - fixed: some false DBC warnings removed
	 - fixed: bug in setting jack_multi channel count
01012011 meta: notes on provided change information in this file
	 - the release entries will be shorter from now on, only
	   listing the affected features (e.g. which objects), 
	   and type of change (addition, change, bugfix)
	 - see RELNOTES and git commit history for a more detailed
	   description
	 - author tags will no longer be used, [foobar] used to
	   indicate the author of the change, unless it was from
	   someone from the main author(s); README still lists 
	   all the developer tags used; instead git history 
	   shows who did what
19082010 (v2.7.2) -** stable release **-
	 - added: manual gate (-gm); see ecasound(1) man page
	 - changed: liboil now enabled by default if the library 
	   	    development files are available when running
		    configure
	 - fixed: bug with 'resample' objects and early seeks (e.g.
	   	  with '-y' offsets); reported by Artur
         - fixed: bugs in kvutils that broke some old/non-glibc 
	   	  builds (e.g. cygwin); bug reported by Al Oomens
         - fixed: bugs in saving chainsetups with stacked audio
	   	  objects ("audioloop", "select", "playat")
20022010 (v2.7.1) -** stable release **-
	- note: key changes are described in more detail at:
                http://eca.cx/relnotes/ecasound_v2_7_1_relnotes.txt
	- fixed: glitches in ALSA capture/playback with some sound 
	  	 hardware/configurations, and using alsa-lib
	    	 older than 1.0.15; related to deprecated ALSA API
		 function snd_pcm_sw_params_set_xfer_align()
        - fixed: bug in removing audio objects when disk double
	  	 buffering is used (-z:db); could cause a segfault